# forgecustomer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  render.yaml
.cargo/: audit.toml
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
api/src/auth/: extract.rs  mod.rs
api/src/domain/: admin.rs  checkout.rs  customer.rs  deletion.rs  entitlement.rs  installation.rs  lease.rs  license.rs  mod.rs  redaction.rs  snapshot.rs  subscription.rs  updates.rs  usage.rs
api/src/integrations/: dataforge.rs  mod.rs  stripe.rs
api/src/middleware/: mod.rs  rate_limit.rs
api/src/repositories/: admin.rs  catalog.rs  commerce.rs  customers.rs  entitlements.rs  licensing.rs  mod.rs  privacy.rs  updates.rs  usage.rs
api/src/routes/: catalog.rs  entitlements.rs  health.rs  mod.rs
api/src/services/: mod.rs  signing.rs
api/src/workers/: mod.rs  outbox.rs  usage.rs
api/tests/: security.rs
contracts/: entitlement-v1.schema.json  lease-v1.schema.json  openapi.yaml
contracts/events/: README.md  outbox-event-v1.schema.json
deploy/: Dockerfile
doc/: FOCSYSTEM.md
doc/system/: 00-overview.md  01-authority-boundaries.md  02-architecture-runtime.md  03-api-contract.md  04-data-model.md  05-domain-subsystems.md  (+8 more)
docs/: API.md  DATA_AUTHORITY.md  ENTITLEMENTS.md  IMPLEMENTATION_STATUS.md  LICENSING.md  PRIVACY.md  RUNBOOK.md  SECURITY.md  STRIPE.md  SYSTEM.md  USAGE.md
scripts/: release_pipeline_smoke.sh  update_campaign_http_smoke.sh
supabase/: config.toml  seed.sql
tests/: README.md
(+15 files in other folders)
