[package]
name = "forgecustomer-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ForgeCustomer API — customer, commerce, licensing, entitlement and usage authority"

[lib]
name = "forgecustomer_api"
path = "src/lib.rs"

[[bin]]
name = "forgecustomer-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "limit", "timeout", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
subtle = "2"
rand = "0.8"
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
jsonwebtoken = "9"
serde_json = "1"
base64 = "0.22"
